[package]
name = "azure_app_config"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Azure App Configuration REST API Wrapper"

[dependencies]
serde = { version="1.0.114", features = ["derive"]}
serde_json = "1.0.114"
azure_identity = "0.20.0"
azure_core = "0.20.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }